--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 <body>
     <header>
         <div class="logo">
-            <img src="../" alt="Logo Placeholder">
+            <!--<img src="../" alt="Logo Placeholder">-->
+            <h3>D-RevII</h3>
         </div>  
         <button class="nav-toggle" aria-label="toggle navigation">
-        <span class="hamburger"></span>
+            <span class="hamburger"></span>
         </button>
-        <nav class="nav__list">
+        <nav class="nav">
             <ul class="nav__list">
                 <li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
                 <li class="nav__item"><a href="index.html#services" class="nav__link">My Services</a></li>
@@ -34,7 +35,7 @@
             Hi I am <strong>Doug Revell</strong>
         </h1>
         <p class="section__subtitle section__subtitle--intro">Full-Stack Dev</p>
-        <img src="img-of-me" alt="Casual image of me" class="intro__imgage">
+        <img src="../Portfolio/IMG_0564.JPG" alt="Casual image of me" class="intro__img">
     </section>
 
     <!--My Services-->
@@ -108,6 +109,6 @@
         </ul>
     </footer>
 
-    <script src="js/index.js"></script>
+    <script src="index.js"></script>
     </body>
 </html>
