fix My Work Links

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 
             </div>
 
-            <img src="../Portfolio/IMG_0564.JPG" alt="img of me" class="aboutme__img">
+            <img src="../" alt="img of me" class="aboutme__img">
     </section>
 
     <!--My Work-->
@@ -82,19 +82,19 @@
         <div class="portfolio">
             <!--Portfolio Item 1 -->
             <a href="https://codepen.io/dougrev/pen/poWgQzw" class="portfolio__item">
-                <img src="https://codepen.io/dougrev/pen/poWgQzw" alt="" class="portfolio__img">
+                <img url="https://codepen.io/dougrev/pen/poWgQzw" alt="Codepen Creature"class="portfolio__img">
             </a>
             <!--Portfolio Item 2-->
-            <a href="#" class="portfolio__item">
-                <img src="portfolio-01.jpg" alt="" class="portfolio__img">
+            <a href="https://github.com/DougRev/RacingHub" class="portfolio__item">
+                <img url="https://github.com/DougRev/RacingHub" alt="Racing Hub Website (.NET MVC)"class="portfolio__img">
             </a>
             <!--Portfolio Item 3-->
-            <a href="#" class="portfolio__item">
-                <img src="portfolio-01.jpg" alt="" class="portfolio__img">
+            <a href="https://github.com/DougRev/WebAPISongProject" class="portfolio__item">
+                <img url="https://github.com/DougRev/WebAPISongProject" alt="Song Database(API Project)"class="portfolio__img">
             </a>
             <!--Portfolio Item 4-->
-            <a href="#" class="portfolio__item">
-                <img src="portfolio-01.jpg" alt="" class="portfolio__img">
+            <a href="https://github.com/DougRev/RavenSmoke" class="portfolio__item">
+                <img url="https://github.com/DougRev/RavenSmoke" alt="RavenSmoke Artist Website(future proj)"class="portfolio__img">
             </a>
         </div>
     </section>
