--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
     <link href="../Portfolio/Fonts/" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/245e533291.js" crossorigin="anonymous"></script>
 
 </head>
 <body>
     <header>
         <div class="logo">
-            <!--<img src="../" alt="Logo Placeholder">-->
-            <h3>D-RevII</h3>
+            <img src="../Portfolio/Logo.png" alt="Logo Placeholder">
+            <h3></h3>
         </div>  
         <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"></span>
@@ -35,7 +36,7 @@
             Hi I am <strong>Doug Revell</strong>
         </h1>
         <p class="section__subtitle section__subtitle--intro">Full-Stack Dev</p>
-        <img src="../Portfolio/IMG_0564.JPG" alt="Casual image of me" class="intro__img">
+        <img src="../Portfolio/Logo.png" alt="Casual image of me" class="intro__img">
     </section>
 
     <!--My Services-->
@@ -43,19 +44,20 @@
         <h2 class="section__title section__title--services">What I do</h2>
         <div class="services">
             <div class="service">
-                <h3> Back End Development</h3>
-                <p>API, MVC </p>
+                <h3>Back End Development</h3>
+                <p>Music Database API with full CRUD API project accessible through Postman</p>
+                <a href="https://github.com/DougRev/WebAPISongProject"><i class="fa-brands fa-github"></i></a>
             </div> <!--/service-->
             <div class="service">
-                <h3>Web Development</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias aliquam nam magni quia laudantium ea quam qui expedita 
-                    saepe natus nostrum harum, ut voluptatem architecto quas voluptates deleniti alias asperiores.</p>
+                <h3>Full Stack Web MVC</h3>
+                <p>This Assetto Corsa Racing Hub Web MVC showcases full CRUD with Entity Framework and bootstrap.</p>
+                <a href="https://github.com/DougRev/RacingHub"><i class="fa-brands fa-github"></i></a>
             </div><!--/service-->
 
             <div class="service">
-                <h3>Full-Stack</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias aliquam nam magni quia laudantium ea quam qui expedita 
-                    saepe natus nostrum harum, ut voluptatem architecto quas voluptates deleniti alias asperiores.</p>
+                <h3>Web Dev</h3>
+                <p>Here is a a professional website for a Chiropractic Office.</p>
+                <a href="https://github.com/DougRev/RacingHub"><i class="fa-brands fa-github"></i></a>
             </div><!--/service-->
         </div>
         <a href="#work" class="btn">My Work</a>
@@ -67,40 +69,56 @@
         <p class="section__subtitle section__subtitle--about"></p>
 
             <div class="about-me__body">
-                <p>Hello I am Doug. Former Active Duty Navy. After serving my country I worked around to stay busy until I realized I was not happy anymore. I then took up class at Eleven Fifty Academy and you can see my growing work below.</p>
-                
+                <p>Hello I am Doug. Former Active Duty Navy. After serving my country I worked around to stay busy until I realized I wanted to become a software developer. 
+                    I then took up class at Eleven Fifty Academy and you can see my growing work below. I look forward to meeting you.
+                </p>
             </div>
 
-            <img src="../" alt="img of me" class="aboutme__img">
+            <img src="../Portfolio/IMG_0564.JPG" alt="Casual image of me" class="intro__img">
     </section>
 
     <!--My Work-->
-    <section class="My-Work" id="work">
+   <!--- <section class="My-Work" id="work">
         <h2 class="section__title section__title--work">My Work</h2>
-        <p class="section__subtitle section__subtitle--work">A selection of my range of work</p>
+        <p class="section__subtitle section__subtitle--work">A selection of my range of work</p>-->
 
         <div class="portfolio">
             <!--Portfolio Item 1 -->
-            <a href="https://codepen.io/dougrev/pen/poWgQzw" class="portfolio__item">
-                <img url="https://codepen.io/dougrev/pen/poWgQzw" alt="Codepen Creature"class="portfolio__img">
+            
+            <!--g<a href="https://codepen.io/dougrev/pen/poWgQzw" class="portfolio__item">
+                <img src="../Portfolio/CSS Creature.html" alt="Codepen Creature"class="portfolio__img">-->
             </a>
             <!--Portfolio Item 2-->
-            <a href="https://github.com/DougRev/RacingHub" class="portfolio__item">
-                <img url="https://github.com/DougRev/RacingHub" alt="Racing Hub Website (.NET MVC)"class="portfolio__img">
+           <!--- <a href="https://github.com/DougRev/RacingHub" class="portfolio__item">
+                <img url="https://github.com/DougRev/RacingHub" alt="Racing Hub Website (.NET MVC)"class="portfolio__img">-->
             </a>
             <!--Portfolio Item 3-->
-            <a href="https://github.com/DougRev/WebAPISongProject" class="portfolio__item">
-                <img url="https://github.com/DougRev/WebAPISongProject" alt="Song Database(API Project)"class="portfolio__img">
+           <!-- <a href="https://github.com/DougRev/WebAPISongProject" class="portfolio__item">
+                <img url="https://github.com/DougRev/WebAPISongProject" alt="Song Database(API Project)"class="portfolio__img">-->
             </a>
             <!--Portfolio Item 4-->
-            <a href="https://github.com/DougRev/RavenSmoke" class="portfolio__item">
-                <img url="https://github.com/DougRev/RavenSmoke" alt="RavenSmoke Artist Website(future proj)"class="portfolio__img">
+           <!-- <a href="https://github.com/DougRev/RavenSmoke" class="portfolio__item">
+                <img url="https://github.com/DougRev/RavenSmoke" alt="RavenSmoke Artist Website(future proj)"class="portfolio__img">-->
             </a>
         </div>
     </section>
 
+    <section class="Contact-Info" id="contact">
+        <h2 class="section__title section__title--contact">Contact Info</h2>
+        <p class="section__subtitle section__subtitle--contact">
+            <ul>
+                <li>
+                    <a href="mailto:doug.revelljr@gmail.com" class="contact-link">Doug.Revelljr@Gmail.com</a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/douglas-revell-6133abb0" class="contact-link">LinkedIn</a>
+                </li>
+            </ul>     
+
+        </p>
+    </section>
+
     <footer>
-        <a href="mailto:doug.revelljr@gmail.com" class="footer-link">doug.revelljr@gmail.com</a>
         <ul class="social-list">
             <li class="social-list__item"><a class="social-list__link" href="https://codepen.io"><i class="fa-brands fa-github"></i></a></li>
             <li class="social-list__item"><a class="social-list__link" href="https://github.com"></a></li>
