--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
     <title>Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
     <link href="../Portfolio/Fonts/" rel="stylesheet">
@@ -47,16 +47,17 @@
                 <h3>Back End Development</h3>
                 <p>Music Database API with full CRUD API project accessible through Postman</p>
                 <a href="https://github.com/DougRev/WebAPISongProject"><i class="fa-brands fa-github"></i></a>
-            </div> <!--/service-->
+            </div> 
+            <!--/service-->
             <div class="service">
                 <h3>Full Stack Web MVC</h3>
                 <p>This Assetto Corsa Racing Hub Web MVC showcases full CRUD with Entity Framework and bootstrap.</p>
                 <a href="https://github.com/DougRev/RacingHub"><i class="fa-brands fa-github"></i></a>
-            </div><!--/service-->
-
+            </div>
+            <!--/service-->
             <div class="service">
                 <h3>Web Dev</h3>
-                <p>Here is a a professional website for a Chiropractic Office.</p>
+                <p>A current project I am working on to revamp a Chiropractic Office webpage.</p>
                 <a href="https://github.com/DougRev/RacingHub"><i class="fa-brands fa-github"></i></a>
             </div><!--/service-->
         </div>
@@ -120,7 +121,7 @@
 
     <footer>
         <ul class="social-list">
-            <li class="social-list__item"><a class="social-list__link" href="https://codepen.io"><i class="fa-brands fa-github"></i></a></li>
+            <li class="social-list__item"><a class="social-list__link" href="https://codepen.io"></a></li>
             <li class="social-list__item"><a class="social-list__link" href="https://github.com"></a></li>
             <li class="social-list__item"><a class="social-list__link" href="https://codepen.io"></a></li>
             <li class="social-list__item"><a class="social-list__link" href="https://codepen.io"></a></li>
