fix img links in html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             Hi I am <strong>Doug Revell</strong>
         </h1>
         <p class="section__subtitle section__subtitle--intro">Full-Stack Dev</p>
-        <img src="../Portfolio/Logo.png" alt="Casual image of me" class="intro__img">
+        <img src="../Portfolio/logo.png" alt="Casual image of me" class="intro__img">
     </section>
 
     <!--My Services-->
@@ -75,7 +75,7 @@
                 </p>
             </div>
 
-            <img src="../Portfolio/IMG_0564.JPG" alt="Casual image of me" class="intro__img">
+            <img src="../Portfolio/me.jpg" alt="Casual image of me" class="intro__img">
     </section>
 
     <!--My Work-->
