--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="../Portfolio/Logo.png" alt="Logo Placeholder">
+            <img src="../Portfolio/images/logo.png" alt="Logo Placeholder">
             <h3></h3>
         </div>  
         <button class="nav-toggle" aria-label="toggle navigation">
