--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="../Portfolio/images/logo.png" alt="Logo Placeholder">
+            <img src="images/logo.png" alt="Logo Placeholder">
             <h3></h3>
         </div>  
         <button class="nav-toggle" aria-label="toggle navigation">
@@ -36,7 +36,7 @@
             Hi I am <strong>Doug Revell</strong>
         </h1>
         <p class="section__subtitle section__subtitle--intro">Full-Stack Dev</p>
-        <img src="../Portfolio/images/logo.png" alt="Casual image of me" class="intro__img">
+        <img src="images/logo.png" alt="Casual image of me" class="intro__img">
     </section>
 
     <!--My Services-->
@@ -75,7 +75,7 @@
                 </p>
             </div>
 
-            <img src="../Portfolio/images/me.jpg" alt="Casual image of me" class="intro__img">
+            <img src="images/me.jpg" alt="Casual image of me" class="intro__img">
     </section>
 
     <!--My Work-->
