Finally fixed links

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style2.css">
     <title>Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
-    <link href="../Portfolio/Fonts/" rel="stylesheet">
+    <link href="Fonts/" rel="stylesheet">
     <script src="https://kit.fontawesome.com/245e533291.js" crossorigin="anonymous"></script>
 
 </head>
