--- a/index.html
+++ b/index.html
@@ -79,15 +79,14 @@
     </section>
 
     <!--My Work-->
-   <!--- <section class="My-Work" id="work">
-        <h2 class="section__title section__title--work">My Work</h2>
-        <p class="section__subtitle section__subtitle--work">A selection of my range of work</p>-->
+    <section class="My-Work" id="work">
+        <h2 class="section__title section__title--work">Additional Project</h2>
+        <p class="section__subtitle section__subtitle--work">Pokemon Web Assembly using an API</p>
 
         <div class="portfolio">
             <!--Portfolio Item 1 -->
-            
-            <!--g<a href="https://codepen.io/dougrev/pen/poWgQzw" class="portfolio__item">
-                <img src="../Portfolio/CSS Creature.html" alt="Codepen Creature"class="portfolio__img">-->
+            <a href="https://github.com/DougRev/PokemonAPI-WASM" class="portfolio__item">
+                <img src="images/Screenshot-PokemonWASM.PNG" alt="PokemonWASM-Screenshot"class="portfolio__img">
             </a>
             <!--Portfolio Item 2-->
            <!--- <a href="https://github.com/DougRev/RacingHub" class="portfolio__item">
